added some text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Make A pin generate and matching function"
+    />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Touhed islam || mr.touhed.i@gmail.com" />
     <title>Pin Generator</title>
     <link
       rel="stylesheet"
